# redis-benchmarks-specification

./: .flake8  .gitignore  AGENTS.md  CONTRIBUTING.md  ENCODING_COVERAGE.md  Readme.md  commands-priority.json  commands.json  dev_requirements.txt  dump.rdb  groups.json  pyproject.toml  tox.ini
.github/: release-drafter-config.yml
.github/ISSUE_TEMPLATE/: benchmark-spec-request.md  bug_report.md
.github/workflows/: poetry-ci-test-lint.yml  publish-pypi.yml  release-drafter.yml  tox-self-hosted.yml  tox.yml  validate-spec-fields.yml
docs/: CLI.md
redis_benchmarks_specification/: __init__.py
redis_benchmarks_specification/__api__/: Readme.md  __init__.py  api.py  app.py  schema.py
redis_benchmarks_specification/__builder__/: Readme.md  __init__.py  builder.py  schema.py
redis_benchmarks_specification/__cli__/: admin.py  args.py  cli.py  stats.py
redis_benchmarks_specification/__common__/: builder_schema.py  core-specs.json  env.py  files-to-groups.json  github.py  multi_tool.py  package.py  runner.py  scope.py  spec.py  suppress_warnings.py  timeseries.py
redis_benchmarks_specification/__compare__/: __init__.py  args.py  compare.py
redis_benchmarks_specification/__runner__/: args.py  remote_profiling.py  runner.py
redis_benchmarks_specification/__self_contained_coordinator__/: args.py  artifacts.py  build_info.py  clients.py  cpuset.py  docker.py  parca_agent.py  post_processing.py  prepopulation.py  runners.py  self_contained_coordinator.py  topdown_profiler.py
redis_benchmarks_specification/__setups__/: data_collection_tools.py  topologies.py
redis_benchmarks_specification/__spec__/: args.py  cli.py
redis_benchmarks_specification/__watchdog__/: args.py  watchdog.py
redis_benchmarks_specification/api/: api.py
redis_benchmarks_specification/builder/: builder.py  schema.py
redis_benchmarks_specification/commands/: commands.py
redis_benchmarks_specification/common/: env.py
redis_benchmarks_specification/latency-test-suites/: latency-rate-limited-10000_qps-memtier_benchmark-100Kkeys-load-hash-50-fields-with-1000B-values.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-100B-expire-use-case.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-1KiB-expire-use-case.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-4KiB-expire-use-case.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-bitmap-getbit-pipeline-10.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-generic-expireat-pipeline-10.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-generic-scan-pipeline-10.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-hash-hget-hgetall-hkeys-hvals-with-100B-values.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-hash-hincrby.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-hash-hmget-5-fields-with-100B-values-pipeline-10.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-load-hash-5-fields-with-1000B-values-pipeline-10.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-load-list-with-100B-values.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-load-set-intset-with-100-elements-pipeline-10.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-load-stream-1-fields-with-100B-values-pipeline-10.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-load-stream-1-fields-with-100B-values.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-load-string-with-1KiB-values.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-load-zset-with-10-elements-double-score.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-string-append-1-100B.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-string-decr.yml  latency-rate-limited-10000_qps-memtier_benchmark-1Mkeys-string-incrbyfloat.yml  latency-rate-limited-10000_qps-memtier_benchmark-1key-geo-2-elements-geosearch-fromlonlat-withcoord.yml  latency-rate-limited-10000_qps-memtier_benchmark-1key-geo-60M-elements-geodist-pipeline-10.yml  latency-rate-limited-10000_qps-memtier_benchmark-1key-geo-60M-elements-geopos-pipeline-10.yml  latency-rate-limited-10000_qps-memtier_benchmark-1key-geo-60M-elements-geosearch-fromlonlat.yml  latency-rate-limited-10000_qps-memtier_benchmark-1key-hash-hscan-50-fields-10B-values.yml  latency-rate-limited-10000_qps-memtier_benchmark-1key-list-10-elements-lrange-all-elements.yml  latency-rate-limited-10000_qps-memtier_benchmark-1key-list-100-elements-lrange-all-elements-pipeline-10.yml  latency-rate-limited-10000_qps-memtier_benchmark-1key-list-100-elements-lrange-all-elements.yml  latency-rate-limited-10000_qps-memtier_benchmark-1key-pfadd-4KB-values-pipeline-10.yml  latency-rate-limited-10000_qps-memtier_benchmark-1key-set-100-elements-smismember.yml  latency-rate-limited-10000_qps-memtier_benchmark-1key-set-1K-elements-smembers.yml  latency-rate-limited-10000_qps-memtier_benchmark-1key-set-2M-elements-sadd-increasing.yml  latency-rate-limited-10000_qps-memtier_benchmark-1key-zincrby-1M-elements-pipeline-1.yml  latency-rate-limited-10000_qps-memtier_benchmark-1key-zrevrank-1M-elements-pipeline-1.yml  latency-rate-limited-10000_qps-memtier_benchmark-1key-zset-100-elements-zrangebyscore-all-elements.yml  latency-rate-limited-10000_qps-memtier_benchmark-1key-zset-100-elements-zscan.yml  latency-rate-limited-10000_qps-memtier_benchmark-1key-zset-1M-elements-zrevrange-5-elements.yml  latency-rate-limited-10000_qps-memtier_benchmark-3Mkeys-load-string-with-512B-values.yml  (+3 more)
setups/: topologies.yml
test-suites/: redis-benchmark-full-suite-1Mkeys-100B.yml
utilities/: .flake8  pyproject.toml
utilities/redis_benchmarks_specification/: __init__.py  api.py
utilities/redis_benchmarks_specification/builder/: __init__.py  schema.py
utilities/tests/: test_redis_benchmarks_specification.py  test_schema.py
utils/: ai_dataset_naming.py  create-hset.py  create-intset.py  create-zset-300-elements.py  generate_latency_benchmarks.py  generate_memory_requirements.py  summary.py  test-requirements.txt
utils/tests/: test_admin.py  (+21 more)
(+734 files in other folders)
