[tool.poetry]
name = "redis-benchmarks-specification"
version = "0.1.10"
description = "The Redis benchmarks specification describes the cross-language/tools requirements and expectations to foster performance and observability standards around redis related technologies. Members from both industry and academia, including organizations and individuals are encouraged to contribute."
authors = ["filipecosta90 <filipecosta.90@gmail.com>"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.6.1"
Flask = "^2.0.1"
Werkzeug = "^2.0.1"
flask-restx = "^0.5.0"
redis = "^3.5.3"
marshmallow = "^3.12.2"
argparse = "^1.4.0"
Flask-HTTPAuth = "^4.4.0"
PyYAML = "^5.4.1"
docker = "^4.4.4"
redisbench-admin = "^0.4.16"
psutil = "^5.8.0"
tox-docker = "^3.0.0"
PyGithub = "^1.55"
GitPython = "^3.1.20"

[tool.poetry.dev-dependencies]
black = "20.8b1"
pytest = "^5.2"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
codecov = "^2.1.12"
tox-poetry-installer = {extras = ["poetry"], version = "^0.8.1"}
tox-docker = {extras = ["poetry"], version = "^3.0.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
redis-benchmarks-spec-api = "redis_benchmarks_specification.__api__.api:main"
redis-benchmarks-spec-builder = "redis_benchmarks_specification.__builder__.builder:main"
redis-benchmarks-spec-sc-coordinator = "redis_benchmarks_specification.__self_contained_coordinator__.self_contained_coordinator:main"
redis-benchmarks-spec-cli = "redis_benchmarks_specification.__cli__.cli:main"
