[tool.poetry]
name = "redis-benchmarks-specification"
version = "0.1.69"
description = "The Redis benchmarks specification describes the cross-language/tools requirements and expectations to foster performance and observability standards around redis related technologies. Members from both industry and academia, including organizations and individuals are encouraged to contribute."
authors = ["filipecosta90 <filipecosta.90@gmail.com>","Redis Performance Group <performance@redis.com>"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.6.9a"
Flask = "^2.0.3"
flask-restx = "^0.5.0"
redis = "^4.2.0"
marshmallow = "^3.12.2"
argparse = "^1.4.0"
Flask-HTTPAuth = "^4.4.0"
PyYAML = "^6.0"
docker = "^5.0.0"
redisbench-admin = "^0.9.23"
psutil = "^5.9.4"
PyGithub = "^1.55"
GitPython = "^3.1.20"
semver = "^2.13.0"
node-semver = "^0.8.1"
typed-ast = "^1.5.0"
oyaml = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
codecov = "^2.1.12"
black = "22.10.0"
flake8 = "^5.0.0"
tox-poetry-installer = {extras = ["poetry"], version = "^0.10.0"}
tox-docker = {extras = ["poetry"], version = "^3.1.0"}

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
redis-benchmarks-spec-api = "redis_benchmarks_specification.__api__.api:main"
redis-benchmarks-spec-builder = "redis_benchmarks_specification.__builder__.builder:main"
redis-benchmarks-spec-client-runner = "redis_benchmarks_specification.__runner__.runner:main"
redis-benchmarks-spec-sc-coordinator = "redis_benchmarks_specification.__self_contained_coordinator__.self_contained_coordinator:main"
redis-benchmarks-spec-cli = "redis_benchmarks_specification.__cli__.cli:main"
redis-benchmarks-spec-watchdog = "redis_benchmarks_specification.__watchdog__.watchdog:main"
redis-benchmarks-spec = "redis_benchmarks_specification.__spec__.cli:main"
