[tool.poetry]
name = "redis-benchmarks-specification"
version = "0.1.0"
description = ""
authors = ["filipecosta90 <filipecosta.90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^2.0.1"
Werkzeug = "^2.0.1"
flask-restx = "^0.5.0"
redis = "^3.5.3"
marshmallow = "^3.12.2"
argparse = "^1.4.0"
Flask-HTTPAuth = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
redis-benchmarks-specification-api = "redis_benchmarks_specification.api:main"